# LLM

./: .env.example  .gitattributes  .gitignore  Assignment2_report.docx  Assignment2_updated.docx  Model Weight Initialization.docx  README.md  pyproject.toml  requirements.txt  ~$del Weight Initialization.docx  ~WRL1911.tmp  ~WRL2578.tmp
ass1/: ID.txt  english_samples.txt  hebrew_samples.txt
ass1/checkpoints/en/: checkpoint_efficient=True_1000.pt  checkpoint_efficient=True_10000.pt  checkpoint_efficient=True_11000.pt  checkpoint_efficient=True_12000.pt  checkpoint_efficient=True_13000.pt  checkpoint_efficient=True_14000.pt  checkpoint_efficient=True_15000.pt  checkpoint_efficient=True_16000.pt  checkpoint_efficient=True_17000.pt  checkpoint_efficient=True_18000.pt  checkpoint_efficient=True_19000.pt  checkpoint_efficient=True_2000.pt  checkpoint_efficient=True_20000.pt  checkpoint_efficient=True_21000.pt  checkpoint_efficient=True_22000.pt  checkpoint_efficient=True_23000.pt  checkpoint_efficient=True_24000.pt  checkpoint_efficient=True_25000.pt  checkpoint_efficient=True_26000.pt  checkpoint_efficient=True_27000.pt  checkpoint_efficient=True_28000.pt  checkpoint_efficient=True_29000.pt  checkpoint_efficient=True_3000.pt  checkpoint_efficient=True_30000.pt  checkpoint_efficient=True_31000.pt  checkpoint_efficient=True_32000.pt  checkpoint_efficient=True_33000.pt  checkpoint_efficient=True_34000.pt  checkpoint_efficient=True_35000.pt  checkpoint_efficient=True_36000.pt  checkpoint_efficient=True_37000.pt  checkpoint_efficient=True_38000.pt  checkpoint_efficient=True_39000.pt  checkpoint_efficient=True_4000.pt  checkpoint_efficient=True_40000.pt  checkpoint_efficient=True_41000.pt  checkpoint_efficient=True_42000.pt  checkpoint_efficient=True_43000.pt  checkpoint_efficient=True_44000.pt  checkpoint_efficient=True_45000.pt  (+10 more)
ass1/checkpoints/he/: checkpoint_efficient=True_1000.pt  checkpoint_efficient=True_10000.pt  checkpoint_efficient=True_11000.pt  checkpoint_efficient=True_12000.pt  checkpoint_efficient=True_13000.pt  checkpoint_efficient=True_14000.pt  checkpoint_efficient=True_15000.pt  checkpoint_efficient=True_16000.pt  checkpoint_efficient=True_17000.pt  checkpoint_efficient=True_18000.pt  checkpoint_efficient=True_19000.pt  checkpoint_efficient=True_2000.pt  checkpoint_efficient=True_20000.pt  checkpoint_efficient=True_21000.pt  checkpoint_efficient=True_22000.pt  checkpoint_efficient=True_23000.pt  checkpoint_efficient=True_24000.pt  checkpoint_efficient=True_25000.pt  checkpoint_efficient=True_26000.pt  checkpoint_efficient=True_27000.pt  checkpoint_efficient=True_28000.pt  checkpoint_efficient=True_29000.pt  checkpoint_efficient=True_3000.pt  checkpoint_efficient=True_30000.pt  checkpoint_efficient=True_31000.pt  checkpoint_efficient=True_32000.pt  checkpoint_efficient=True_33000.pt  checkpoint_efficient=True_34000.pt  checkpoint_efficient=True_35000.pt  checkpoint_efficient=True_36000.pt  checkpoint_efficient=True_37000.pt  checkpoint_efficient=True_38000.pt  checkpoint_efficient=True_39000.pt  checkpoint_efficient=True_4000.pt  checkpoint_efficient=True_40000.pt  (+15 more)
ass1/code/: attention.py  attention_statistics.py  data.py  hooks.py  interpretation.py  lm.py  main.py  sample_texts.py  test.py  tests.py  transformer.py  validation_main.py
ass1/test_outputs/: english_samples.txt  hebrew_samples.txt
ass2/: architecture.py  tokenizer_average.py
ass2-v2/: .env.example  .gitignore  .pre-commit-config.yaml  ANSWERS.md  CLAUDE.md  FILES_GUIDE.md  Makefile  README.md  README_assignment2.md  SPEC.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt
ass2-v2/.agents/rules/: core-guidlines.md
ass2-v2/.cache/: dicta-il__dictalm2.0-instruct.config.json  tiiuae__Falcon3-7B-Instruct.config.json
ass2-v2/.github/workflows/: ci.yml
ass2-v2/data/: fixtures.py
ass2-v2/data/train/: train.jsonl
ass2-v2/outputs/: architecture.csv  decoding_outputs.csv  decoding_outputs.jsonl  decoding_outputs_system_prompt.csv  eval_outputs.jsonl  hebrew_allowed_tokens_mistral.json  hebrew_allowed_tokens_qwen.json  tokenization_diff_detail.json  tokenizers.csv
ass2-v2/report/: build_report.py  build_report_docx.js  students.json
ass2-v2/report/sections/: part1_analysis.md  part2_diff.md  part4_method.md
ass2-v2/scripts/: run_all.sh
ass2-v2/src/common/: token_utils.py
ass2-v2/src/part1_architecture/: analyze_architecture.py  extract_architecture.py
ass2-v2/src/part2_tokenizers/: analyze_tokenizers.py  tokenization_diff.py
ass2-v2/src/part3_decoding/: constrained_decode.py  identify_hebrew_tokens.py  run_decoding.py
ass2-v2/src/part4_finetuning/: evaluate.py  make_data.py  train_lora.py
ass2-v2/tests/: test_core.py
ass2/data/: architecture.csv  architecture.txt  architecture_raw.txt  tokenizer.csv  tokenizer_raw.txt
(+331 files in other folders)
