[project]
name = "LLM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s[full]>=0.2.14",
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "markdownify>=1.2.2",
    "numpy>=2.3.5",
    "openai>=2.15.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    # Optional dependencies:
    "tqdm>=4.67.1",
    "python-bidi>=0.6.7",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.0",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8",
    "dataset>=2.0.0",
    "datasets>=4.8.5",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"


url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_test.py"]
