[project]
name = "llm-ass2"
version = "1.0.0"
description = "LLM class Assignment 2: architecture analysis, tokenizers, constrained decoding, LoRA fine-tuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.45",
    "tokenizers>=0.20",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25",
    "requests>=2.31",
    "torch>=2.12.0",
    "accelerate>=1.13.0",
    "openai>=2.38.0",
    "peft>=0.19.1",
    "playwright>=1.60.0",
    "datasets>=4.8.5",
]

# GPU parts (Parts 3 and 4) and optional extras. Installed on demand so the
# CPU-only Parts 1 and 2 stay lightweight.
[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "accelerate>=0.34",
    "peft>=0.13",
    "datasets>=2.20",
]
data = [
    "openai>=1.40",
]
report = [
    "weasyprint>=62",
    "markdown>=3.6",
    # Playwright is the Windows-friendly PDF backend: WeasyPrint needs the
    # GTK/Pango system libs which are not bundled on Windows, so we fall back
    # to headless Chromium via Playwright when WeasyPrint cannot import them.
    "playwright>=1.40",
]

# Dev tooling lives in a dependency group so it is not part of the shipped
# package. Install with: uv sync --group dev
[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.39",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "data", "config.py"]

# --------------------------------------------------------------------------- #
# Ruff: lint + format + import sorting + modernization
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "data", "report", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Local imports after sys.path manipulation are intentional in entrypoint scripts.
"src/**/*.py" = ["E402"]
"report/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["config", "data", "src", "report"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# --------------------------------------------------------------------------- #
# ty: static type checking (Astral)
# --------------------------------------------------------------------------- #
[tool.ty.environment]
python-version = "3.13"
# Point ty at the project virtual environment for installed-package resolution.
python = ".venv"

[tool.ty.rules]
# Heavy ML libraries (torch, transformers, peft) ship partial or no stubs, so
# imports that cannot be resolved in a CPU-only environment are warnings, not
# hard errors. This keeps Parts 1 and 2 checkable without the GPU extras.
unresolved-import = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_files = ["tests.py", "test_*.py", "*_test.py"]

# --------------------------------------------------------------------------- #
# uv: PyTorch GPU wheels (CUDA 13.0) for Parts 3 and 4 on Linux/Windows.
# On macOS this source is ignored and the default CPU/MPS wheel is used.
# --------------------------------------------------------------------------- #
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
